# coop

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  ROADMAP.md  TECHDEBT.md  deny.toml  epic-yoink-graceful-shutdown.md  quench.toml  techdebt.md
.claude/: settings.json
.github/workflows/: README.md  build.yml  ci.yml  ci.yml.disabled  docker.yml  release.yml  upstream-sync.yml
.oj/runbooks/: base.hcl  blocked.hcl  bug.hcl  chore.hcl  doctor.hcl  epic.hcl  merge.hcl  setup.hcl
.rwx/: build.yml  ci.yml  docker.yml  e2e.yml  image.yml  push.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: attach.rs  attach_tests.rs  broker.rs  config.rs  config_tests.rs  cred.rs  credential.rs  credential_tests.rs  error.rs  error_tests.rs  event.rs  lib.rs  main.rs  mux_client.rs  mux_client_tests.rs  open.rs  profile.rs  profile_tests.rs  record_tests.rs  replay_gate_tests.rs  ring.rs  ring_tests.rs  run.rs  run_tests.rs  screen.rs  screen_tests.rs  send.rs  session.rs  session_tests.rs  stop.rs  stop_tests.rs  switch.rs  switch_tests.rs  test_support.rs  usage.rs  usage_tests.rs
crates/cli/src/backend/: adapter.rs
crates/cli/src/broker/: client.rs  distributor.rs  mux.rs  registry.rs
crates/cli/src/command/: attach.rs  attach_tests.rs  cred.rs  mod.rs  peek.rs  send_tests.rs
crates/cli/src/driver/: composite.rs  composite_tests.rs  driver_tests.rs  error_category.rs  error_category_tests.rs  grace.rs  grace_tests.rs  hook_detect.rs  hook_recv.rs  hook_recv_tests.rs  jsonl_stdout.rs  jsonl_stdout_tests.rs  log_watch.rs  log_watch_tests.rs  mod.rs  nats_detect.rs  nats_recv.rs  nats_recv_tests.rs  nudge.rs  process.rs  process_tests.rs  screen_parse.rs  screen_parse_tests.rs  stdout_detect.rs
crates/cli/src/driver/claude/: CLAUDE.md  detect.rs  detect_tests.rs  encoding.rs  encoding_tests.rs  hooks.rs  hooks_tests.rs  mod.rs  parse.rs  parse_tests.rs  prompt.rs  prompt_tests.rs  resume.rs  resume_tests.rs  screen.rs  screen_detect.rs  screen_detect_tests.rs  screen_tests.rs  setup.rs  setup_tests.rs  startup.rs  startup_tests.rs  state.rs  state_tests.rs  stream.rs  stream_tests.rs
crates/cli/src/driver/gemini/: detect.rs  detect_tests.rs  encoding.rs  encoding_tests.rs  hooks.rs  hooks_tests.rs  mod.rs  parse.rs  screen.rs  setup.rs  setup_tests.rs  state.rs  state_tests.rs
crates/cli/src/driver/unknown/: mod.rs  mod_tests.rs
crates/cli/src/pty/: adapter.rs  attach.rs  attach_tests.rs  mod.rs  nbio.rs  spawn.rs
crates/cli/src/session/: mod.rs  run.rs  transition.rs
crates/cli/src/transport/: auth.rs  auth_tests.rs  compat.rs  compat_tests.rs  grpc.rs  grpc_tests.rs  handler.rs  handler_tests.rs  http.rs  http_tests.rs  mod.rs  mod_tests.rs  mux.html  nats.rs  nats_pub.rs  state.rs  state_tests.rs  terminal.html  ws.rs  ws_msg.rs  ws_mux.rs  ws_tests.rs
crates/cli/src/transport/grpc/: convert.rs  convert_tests.rs  service.rs
crates/cli/src/transport/http/: agent.rs  agent_tests.rs  broker.rs  credential.rs  env.rs  env_tests.rs  hooks.rs  hooks_tests.rs  mux.rs  profile.rs  profile_tests.rs  screen.rs  screen_tests.rs  switch.rs  switch_tests.rs  transcript.rs  transcript_tests.rs
crates/cli/src/web/: terminal.html
crates/cli/tests/: claude_integration.rs  detector_tiers.rs  docker_e2e.rs  grpc_integration.rs  large_output.rs  log_watch_rotation.rs  nats_integration.rs  pty_backend.rs  pty_edge_cases.rs  rendering_attach.rs  rendering_support.rs  rendering_tmux_oracle.rs  session_loop.rs  tmux_backend.rs  write_lock_stress.rs  ws_integration.rs
crates/cli/tests/scenarios/: claude_ask_user.toml  claude_hello.toml  claude_multi_question.toml  claude_plan_mode.toml  claude_tool_use.toml
crates/mux/: Cargo.toml  README.md
crates/mux/src/: config.rs  events.rs  lib.rs  main.rs  state.rs
crates/mux/src/credential/: broker.rs  device_code.rs  distributor.rs  mod.rs  oauth.rs  persist.rs  pkce.rs  pkce_tests.rs  refresh.rs
crates/mux/src/transport/: auth.rs  http.rs  http_cred.rs  mod.rs  mux.html  nats_pub.rs  ws.rs  ws_mux.rs  ws_mux_tests.rs
crates/mux/src/upstream/: aggregator_feed.rs  bridge.rs  client.rs  feed.rs  health.rs  mod.rs  poller.rs  prewarm.rs  ws_bridge.rs
crates/mux/src/web/: mux.html
crates/mux/tests/: http.rs  integration.rs
crates/web/: biome.json  package.json  vite.config.mux.ts  vite.config.terminal.ts
crates/web/src/components/: ActionBtn.tsx  AgentBadge.tsx  DropOverlay.tsx  OAuthToast.tsx  ResultDisplay.tsx  StatusBar.tsx  Terminal.tsx  TerminalLayout.tsx  TerminalPreview.tsx  Tile.tsx
crates/web/src/components/inspector/: ActionsPanel.tsx  ConfigPanel.tsx  InspectorSidebar.tsx  StatePanel.tsx
crates/web/src/hooks/: useApiClient.ts  useFileUpload.ts  useTerminal.ts  useWebSocket.ts  utils.ts
crates/web/src/lib/: ansi-render.ts  constants.ts  types.ts  ws-harness.test.ts  ws-harness.ts
crates/web/src/mux/: App.tsx  SessionSidebar.tsx
crates/web/src/styles/: globals.css
crates/web/src/terminal/: ActionsPanel.tsx  App.tsx  ConfigPanel.tsx  StatePanel.tsx
deploy/: README.md  k8s-launch.sh  k8s-sidecar.yaml  k8s-standalone.yaml
docs/: rwx-native-oci-migration.md
docs/api/: http.md  websocket.md
docs/claude/: 01-overview.md  02-credentials.md  03-lifecycle.md  04-mux.md  coop-vs-gastown.md  coop-vs-goblintown.md  coop-vs-oddjobs.md  overview.md
epics/: 14a-session-switch.md
proto/coop/v1/: coop.proto
scripts/: install
tests/debug/: capture-claude.sh  capture-claude.ts  start-docker.sh  start-docker.ts  start-k8s.ts  start-mux.ts  start.sh  start.ts  terminal.html
tests/debug/lib/: credentials.ts  setup.ts
tests/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
tests/e2e/fixtures/: fidelity-comparison.html  screen-snapshot.json
tests/e2e/lib/: fidelity-entry.ts  fidelity-server.ts  harness.ts  mock-coop.ts
tests/e2e/specs/: mux-screen-rendering.spec.ts  preview-fidelity.spec.ts
tests/specs/: Cargo.toml
tests/specs/src/: lib.rs
tests/specs/tests/: smoke.rs
(+10 files in other folders)
