[workspace]
resolver = "2"
members = [
    "crates/cli",
]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
