[workspace]
resolver = "2"
members = [
    "crates/cli",
]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
avt = "0.17"
nix = { version = "0.28", features = ["term", "process", "fs", "signal"] }
notify = "7"
prost = "0.13"
regex = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"

# build dependencies
tonic-build = "0.12"

# dev dependencies
proptest = "1"
tempfile = "3"
yare = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
