[package]
name = "coop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
