[package]
name = "coop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "coop"
path = "src/lib.rs"

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
avt.workspace = true
nix.workspace = true
notify.workspace = true
prost.workspace = true
regex.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
base64.workspace = true
futures-util.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
yare.workspace = true
axum-test.workspace = true

[lints]
workspace = true
