[package]
name = "coop-mux"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "coop_mux"
path = "src/lib.rs"

[[bin]]
name = "coopmux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
hyper-util.workspace = true
rand.workspace = true
reqwest.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
axum-test.workspace = true

[lints]
workspace = true
