[package]
name = "coop-specs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
coop = { path = "../../crates/cli", version = "0.1.0" }
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true

[lints]
workspace = true
